
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.Fase3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3D0C3B">

        <TextView
            android:id="@+id/iprecio"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="636dp"
            android:text="@string/iprecio"
            android:textColor="#FFFFFF"
            android:textSize="17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="340dp"
            android:layout_height="100"
            android:layout_marginBottom="336dp"
            android:background="@drawable/cuadrado"
            android:hint="@string/iescriba"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/numero"
            android:layout_width="340dp"
            android:layout_height="50"
            android:layout_marginBottom="164dp"
            android:background="@drawable/cuadrado"
            android:hint="@string/iescriba"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/idireccion"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="460dp"
            android:text="@string/idireccion"
            android:textColor="#FFFFFF"
            android:textSize="17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/inumero"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="236dp"
            android:text="@string/inumero"
            android:textColor="#FFFFFF"
            android:textSize="17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/precio"
            android:layout_width="340dp"
            android:layout_height="50"
            android:layout_marginBottom="564dp"
            android:background="@drawable/cuadrado"
            android:hint="@string/iescriba"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/siguiente1"
            android:layout_width="170dp"
            android:layout_height="50"
            android:layout_marginBottom="52dp"
            android:background="@drawable/cuadro3"
            android:text="@string/siguiente"
            android:textColor="#3D0C3B"
            android:textSize="17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.854"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>