
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.Fase2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3D0C3B">

        <EditText
            android:id="@+id/medicamento"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginBottom="628dp"
            android:background="@drawable/cuadrado"
            android:hint="@string/imedicamento"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ingreseM"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="696dp"
            android:text="@string/ingreseM"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/dosis"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginBottom="484dp"
            android:background="@drawable/cuadrado"
            android:hint="@string/idosis"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ingreseF"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="412dp"
            android:text="@string/ingreseF"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.721"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ingreseT"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="276dp"
            android:text="@string/ingreseT"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.737"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/jueves"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="348dp"
            android:background="@drawable/cuadrado"
            android:text="J"
            android:textColor="#3D0C3B"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/domingo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="348dp"
            android:background="@drawable/cuadrado"
            android:text="D"
            android:textColor="#3D0C3B"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.856"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/lunes"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="348dp"
            android:background="@drawable/cuadrado"
            android:text="L"
            android:textColor="#3D0C3B"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/miercoles"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="348dp"
            android:background="@drawable/cuadrado"
            android:text="M"
            android:textColor="#3D0C3B"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/martes"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="348dp"
            android:background="@drawable/cuadrado"
            android:text="M"
            android:textColor="#3D0C3B"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.257"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/viernes"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="348dp"
            android:background="@drawable/cuadrado"
            android:text="V"
            android:textColor="#3D0C3B"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.614"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/sabado"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="348dp"
            android:background="@drawable/cuadrado"
            android:text="S"
            android:textColor="#3D0C3B"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/noche"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/baseline_nights_stay_white_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.765"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/dia"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/baseline_brightness_5_white_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.269"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/medio"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/baseline_brightness_6_white_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/siguiente1"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginBottom="88dp"
            android:background="@drawable/cuadro3"
            android:text="@string/siguiente"
            android:textColor="#3D0C3B"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.763"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ingreseD"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="560dp"
            android:text="@string/ingreseD"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>