
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.Main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo1">


        <TextView
            android:id="@+id/drinkme"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="380dp"
            android:rotation="-16"
            android:text="@string/drinkMe"
            android:textColor="#CAF5E1"
            android:textSize="80dp"
            app:fontFamily="@font/berkshire_swash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/drinkme2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="264dp"
            android:rotation="-16"
            android:text="@string/drinkMe"
            android:textColor="#3D0C3B"
            android:textSize="80dp"
            app:fontFamily="@font/berkshire_swash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:textAllCaps="false" />

        <Button
            android:id="@+id/registrarse1"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/cuadro3"
            android:fontFamily="@font/adamina"
            android:text="@string/registro"
            android:textColor="#3D0C3B"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/inicio"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginBottom="124dp"
            android:background="@drawable/cuadro3"
            android:fontFamily="@font/adamina"
            android:text="@string/iniciar"
            android:textColor="#3D0C3B"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="556dp"
            android:src="@drawable/circulo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="576dp"
            android:src="@drawable/pill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>